<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText3"
        android:layout_width="93dp"
        android:layout_height="0dp"
        android:layout_marginTop="252dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/team_b"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="93dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/team_a"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:background="@color/colorPrimary"
        android:onClick="countINCREASETeamA"
        android:text="@string/increase_team_a"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.414" />

    <Button
        android:id="@+id/button2"
        android:layout_width="160dp"
        android:layout_height="43dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimary"
        android:onClick="countDECREASETeamA"
        android:text="@string/decrease_team_a"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.414" />

    <TextView
        android:id="@+id/counterValueTeamA"
        android:layout_width="184dp"
        android:layout_height="85dp"
        android:layout_marginTop="16dp"
        android:text="@string/click_to_change_count"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />


    <Button
        android:id="@+id/button3"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:background="@color/colorPrimary"
        android:onClick="countINCREASETeamB"
        android:text="@string/increase_team_b"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/counterValueTeamB" />

    <Button
        android:id="@+id/button4"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="19dp"
        android:background="@color/colorPrimary"
        android:onClick="countDECREASETeamB"
        android:text="@string/decrease_team_b"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/counterValueTeamB" />

    <TextView
        android:id="@+id/counterValueTeamB"
        android:layout_width="188dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

</android.support.constraint.ConstraintLayout>